assets/styles/header.css
.nav {
  padding: var(--grid-margin-vertical) var(--grid-margin-horizontal);
}
.absolute-container {
  height: 100vh;
  position: fixed;
  overflow: auto;
  top: 0;
  right: var(--grid-margin-horizontal);
  padding-top: calc(var(--grid-margin-vertical) + 13.5px);
}
.absolute-container--expanded {
  background-color: var(--off-white);
  padding-right: var(--grid-margin-horizontal);
  margin-right: calc(0px - var(--grid-margin-horizontal));
}
.nav__items,
.nav__links--mobile--expanded {
  display: flex;
  align-items: center;
  list-style: none;
  padding: 0;
}
.nav__logo {
  margin-right: auto;
  height: 44px;
}
.nav__menu {
  cursor: pointer;
}
.nav__menu img {
  height: 17px;
}
.nav__links--mobile-expanded {
  gap: 48px;
}
.nav__link a {
  text-decoration: none;
  color: var(--dark-grayish-blue);
}
/* Desktop Styles */
.nav__links--desktop {
  display: flex;
  flex-direction: row;
  gap: 20px;
}
/* Mobile Styles */

.nav__links--mobile .nav__link:nth-of-type(n + 2) {
  /* display: none; */
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px 1px 1px 1px);
  clip: rect(1px, 1px, 1px, 1px);
}
.nav__links--mobile {
}
.nav__links--mobile-expanded {
  display: flex;
  flex-direction: column;
  gap: 20px;
  /* position: fixed; */
  right: 0;
  top: 0;
  bottom: 0;
  padding: calc(13.5px + var(--grid-margin-vertical))
    var(--grid-margin-horizontal);
  margin-top: calc(-13.5px - var(--grid-margin-vertical));
  margin-right: calc(0px - var(--grid-margin-horizontal));
  align-items: flex-start;

  background-color: var(--off-white);
}
.nav__links--mobile-expanded .nav__menu {
  align-self: flex-end;
}
.body-filter--active {
  position: fixed;
  inset: 0;
  content: "";
  background-color: var(--translucent);
}
.no-display {
  display: none;
}
@media screen and (min-width: 600px) {
  .nav__link:first-child {
    display: none;
  }
}

